Docs: Adição do relatório técnico e documentação do sistema

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:18
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+# Este comando abaixo é o que vai resolver o erro do seu terminal:
+RUN npm install 
 COPY . .
 EXPOSE 3000
 CMD ["node", "server.js"]
